--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hello-world-vite",
+  "name": "mpolls-dapp",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@massalabs/massa-web3": "^5.2.0",
     "@massalabs/react-ui-kit": "^1.1.0",
+    "@massalabs/wallet-provider": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
