--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "VITE_USER_NODE_ENV=build tsc --project tsconfig.build.json && vite build --mode build",
+    "build:demo": "vite build --mode demo",
+    "build:env": "VITE_USER_NODE_ENV=build tsc --project tsconfig.build.json && vite build --mode build",
+    "dev:demo": "vite --mode demo",
     "lint": "eslint .",
     "preview": "vite preview"
   },
