--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "test:all": "npm run test:contract-flow && npm run test:debug-retrieval"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@massalabs/massa-web3": "^5.2.0",
     "@massalabs/react-ui-kit": "^1.1.0",
     "@massalabs/wallet-provider": "^3.2.0",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -36,6 +40,6 @@
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^7.1.7"
   }
 }
