--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
